ECA-2091: Populate the "IMPLCLASS" in ExtendedCAServices' data as a preparation for CESeCore. Corrected code formatting. Added finals and missing type-safety.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@11732 37aeb1de-b14b-0410-9a0e-82b28170d228